<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    android:stretchColumns="2"
    tools:context="me.duydev.baitapbai4.BaiTap3">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setColor"
            android:text="@string/red" />

        <Button
            android:id="@+id/btnGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setColor"
            android:text="@string/green" />

        <Button
            android:id="@+id/btnBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setColor"
            android:text="@string/blue" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:gravity="center"
            android:text="@string/dai_hoc_cong_nghe_tp_ho_chi_minh"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2" />

        <Button
            android:id="@+id/btnClear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearColor"
            android:text="@string/clear" />

    </TableRow>
</TableLayout>
